configure Mockito and tests